<resources>
    <string name="app_name">习酒分销</string>
    <!--<string name="app_name">分销测试</string>-->
    <string name="back">返回</string>
    <!-- 下拉刷新 -->
    <string name="pull_to_refreshing">下拉刷新</string>
    <string name="last_update">最后更新</string>
    <string name="release_refresh">松开立即刷新</string>
    <string name="cancel_refresh">下拉可以刷新</string>
    <string name="loading">正在刷新数据中 &#8230;</string>
    <string name="last_updata">上次更新： </string>

    <string name="version_unknown">未知版本</string>

    <string name="input_user_name">请输入账号</string>
    <string name="input_telephone">请输入手机号</string>
    <string name="input_right_telephone">请输入正确的手机号码</string>
    <string name="input_password">密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="login">登录</string>
    <string name="findback_psw">找回密码</string>
    <string name="input_auth_code">请输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="complete">完成</string>
    <string name="new_wait_time">重新发送</string>
    <string name="auth_code_deliveried">验证码已发送到您手机，请注意查收！</string>

    <string name="deliver_goods_order">送货订单</string>
    <string name="has_completed">已完成</string>
    <string name="not_complete">未完成</string>
    <string name="delivery_number">配送编号：</string>
    <string name="order_number">订单编号</string>
    <string name="customer_name">客户名称</string>
    <string name="contact_person">联&#160;&#160;系&#160;&#160;人</string>
    <string name="contact_tel">联系电话</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址</string>
    <string name="depot">发货仓库</string>
    <string name="order_time">订单时间</string>
    <string name="number">数量</string>
    <string name="has_scanned">已扫</string>
    <string name="total_amout">总金额：</string>
    <string name="deliver_goods">交货</string>
    <string name="scanner_code">扫码</string>
    <string name="yuan_unit">¥&#160;&#160;</string>
    <string name="cancel">取消</string>
    <string name="manual_input">手动输入</string>
    <string name="input_code_num">请输入二维码编号</string>
    <string name="switch_to_scan">切换扫码</string>
    <string name="confirm">确定</string>
    <string name="no_data">暂无数据显示\n点击重新加载数据</string>
    <string name="download">下载</string>
    <string name="downloading">下载中...</string>
    <string name="new_no_found_sd">未发现可用存储的SD卡,无法下载</string>
    <string name="download_fail">安装包下载失败！</string>
    <string name="update">立即更新</string>
    <string name="cancel_update">忽略更新</string>
    <string name="new_version">发现新版本</string>
    <string name="version">版本号：</string>

    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="username_or_password_error">用户名或密码错误</string>
    <string name="logining">正在登录...</string>
    <string name="login_success">登录成功！</string>
    <string name="login_fail">登陆失败！</string>
    <string name="has_deliveryed">已交货</string>
    <string name="delivering">已发货</string>

    <string name="submit_success">提交成功！</string>
    <string name="submitting">正在提交...</string>
    <string name="submit_fail">提交失败！</string>
    <string name="getting">正在获取...</string>
    <string name="getting_data">加载数据...</string>
    <string name="get_data_fail">获取数据失败!</string>
    <string name="get_auth_code_fail">获取验证码失败!</string>
    <string name="get_psw_back_fail">找回密码失败!</string>

    <string name="title_alert">提示信息</string>
    <string name="new_warm_prompt">温馨提示</string>
    <string name="input_reason">已扫数量少于订单数量,请输入原因。</string>
    <string name="code_has_scaned">已扫的二维码</string>
    <string name="ok">确定</string>
    <string name="confirm_submit">确定提交？</string>
    <string name="has_not_complete_scan">已扫数量少于订单数量，确定完成？</string>
    <string name="give_up">扫码未完成，确定放弃本次扫码？</string>
    <string name="system_exception">系统异常</string>
    <string name="exit_login">确定要退出登录吗？</string>
    <string name="complete_scan">扫码完毕！</string>
    <string name="modify_psw">修改密码</string>
    <string name="exit">退&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;出</string>
    <string name="not_scan">未进行扫码，请先扫码！</string>
    <string name="title_activity_modify_psw">ModifyPswActivity</string>
    <string name="old_psw">原密码</string>
    <string name="new_psw">新密码</string>
    <string name="input_old_psw">请输入原密码</string>
    <string name="old_psw_wrong">原密码错误</string>
    <string name="psw_modify_success">密码修改成功！</string>
    <string name="psw_modify_fail">密码修改失败！</string>
    <string name="scan">扫</string>
    <string name="free">&#160;&#160;赠</string>
    <string name="input_has_scan_num">请输入已扫数量</string>
    <string name="not_belong_order">该产品不属于该订单！</string>
    <string name="camera_permission_refuse">相机权限被禁止</string>
    <string name="requeset_camera_permission">申请相机权限</string>
    <string name="requeset_vibrator_permission">申请振动权限</string>
    <string name="requeset_storage_permission">申请内存卡权限</string>
    <string name="requeset_permission_fail">权限被禁止！</string>
    <string name="delivery_man">送货员：</string>
    <string name="remark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注</string>
    <string name="input_too_much">输入数量不能大于总数量</string>
    <string name="scan_num_redundant">扫描到的此类商品多于所需数量！</string>
    <string name="box">箱</string>
    <string name="modify_has_scan">已扫（可点击修改）</string>
    <string name="space">&#160;&#160;</string>
    <string name="please_scan">请进行扫码</string>
    <string name="scan_fail">扫码失败！</string>
    <string name="need_receiver_amount">应收金额：</string>
    <string name="paid_amount">已收金额：</string>
    <string name="receive_amount">收款</string>
    <string name="receive_type">收款方式：</string>
    <string name="received_amount">收款金额：</string>
    <string name="evidence">凭&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;证：</string>
    <string name="input_received_amount">请输入收款金额</string>
    <string name="input_evidence">请输入收款凭证</string>
    <string name="input_remark">请输入备注</string>
    <string name="new_remark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="receive_amount_too_much">收款金额不能大于应收金额</string>
    <string name="cur_version">当前版本</string>
    <string name="is_latest_versin">已是最新版本！</string>
    <string name="delivery_orders">配送列表</string>
    <string name="salesman_orders">销售列表</string>
    <string name="has_checked">已审核</string>
    <string name="not_checked">未审核</string>
    <string name="check">审核</string>
    <string name="uncheck">反审核</string>
    <string name="designate">指派</string>
    <string name="order_num">订单编号：</string>
    <string name="check_people">审&#160;&#160;核&#160;&#160;人</string>
    <string name="place_order_time">下单时间</string>
    <string name="check_time">审核时间</string>
    <string name="seller_info">商家信息</string>
    <string name="seller_name">商家名称</string>
    <string name="take_delivery_info">收货信息</string>
    <string name="take_delivery_people">收&#160;&#160;货&#160;&#160;人</string>
    <string name="take_delivery_address">收货地址</string>
    <string name="goods_info">商品信息</string>
    <string name="order_details">订单详情</string>
    <string name="unit">单位：</string>
    <string name="freegift">赠品</string>
    <string name="voucher">代金券</string>
    <string name="is_sure_check_order">确定该订单通过审核？</string>
    <string name="is_sure_uncheck_order">确定反审核该订单？</string>
    <string name="unit_price">单价</string>
    <string name="count">数量</string>
    <string name="input_edit_data">请输入修改数据</string>
    <string name="invoice_amount">已开发票金额：</string>
    <string name="input_price">请输入单价</string>
    <string name="input_count">请输入数量</string>
    <string name="exit_new">退出</string>
    <string name="select_person">请选择指派人</string>
    <string name="conn_fail">网络连接失败</string>
    <string name="not_person">没有可指派的业务员</string>
    <string name="dialog_title">提示</string>
</resources>
